--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "## Project Requirements 1. Create Firebase project.",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --open",
+    "start": "cross-env NODE_ENV=production webpack",
     "build": "cross-env NODE_ENV=production webpack",
     "test": "jest --watchAll --coverage"
   },
