--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
     "test:debug": "react-scripts --inspect-brk test --runInBand",
     "eject": "react-scripts eject"
   },
-
-  "eslintConfig": { "extends": "react-app" },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "browserslist": [
     ">0.2%",
     "not dead",
@@ -77,7 +78,7 @@
     ]
   },
   "engines": {
-    "node": ">=8.10",
-    "npm": ">=6"
+    "node": "13.10.1",
+    "npm": "6.14.2"
   }
 }
